# agristream-ml

./: .env.example  .gitignore  pyproject.toml
gateway/: app.py  aws.py  config.py
scripts/: export_onnx.py  test_drift.py
telemetry/: monitor.py
worker/: main.py  pipeline.py
